updating Swaggger
